# harper-portuguese

./: .gitignore  AGENTS.md  Cargo.toml  biome.json  demo.md  justfile  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: pull_request_template.md
.github/workflows/: binaries.yml  desktop.yml  just_checks.yml  vscode_plugin.yml
harper-cli/: Cargo.toml
harper-cli/src/: lint.rs  main.rs
harper-comments/: Cargo.toml
harper-core/: Cargo.toml  annotations.json  default_config.json  dictionary.dict
harper-core/src/: dict_word_metadata.rs  irregular_nouns.rs  lib.rs  punctuation.rs  regular_nouns.rs  token_kind.rs  token_string_ext.rs
harper-core/src/expr/: anchor_end.rs  sequence_expr.rs  time_unit_expr.rs
harper-core/src/ignored_lints/: mod.rs
harper-core/src/linting/: a_some_time.rs  avoid_contractions.rs  crave_for.rs  for_free_of_charge.rs  in_favour_of_doing.rs  informal_laughter.rs  long_time_ago.rs  mod.rs  there_is_agreement.rs  there_own.rs
harper-core/src/linting/english/: a_some_time.rs  addicting.rs  avoid_contractions.rs  by_accident.rs  call_them.rs  crave_for.rs  day_and_age.rs  few_units_of_time_ago.rs  find_fine.rs  for_free_of_charge.rs  in_favour_of_doing.rs  long_time_ago.rs  mass_plurals.rs  mod.rs  modal_be_adjective.rs  more_adjective.rs  noun_countability.rs  redundant_acronyms.rs  regionalisms.rs  repeated_words.rs  sought_after.rs  spell_check.rs  split_words.rs  there_is_agreement.rs  there_own.rs  worth_to_do.rs  wrong_apostrophe.rs
harper-core/src/linting/english/mass_nouns/: mod.rs
harper-core/src/linting/english/phrase_set_corrections/: mod.rs  tests.rs
harper-core/src/linting/english/pronoun_contraction/: should_contract.rs
harper-core/src/linting/lint_group/: mod.rs
harper-core/src/spell/: fst_dictionary.rs  merged_dictionary.rs
harper-core/src/weir/: error.rs  mod.rs
harper-core/src/weirpack/: mod.rs
harper-core/tests/text/linters/: The Great Gatsby.snap.yml
harper-core/tests/text/tagged/: Alice's Adventures in Wonderland.md  Difficult sentences.md  Spell.md  The Constitution of the United States.md  The Great Gatsby.md
harper-desktop/: README.md  package.json  vite.config.js
harper-desktop/.github/workflows/: build_artifacts.yml
harper-desktop/src/: app.css  app.html
harper-desktop/src-tauri/: Cargo.toml  tauri.conf.json
harper-desktop/src-tauri/capabilities/: default.json
harper-desktop/src-tauri/src/: color.rs  config.rs  debounce.rs  highlighter_process.rs  highlighter_service.rs  lib.rs  lint_kind_color.rs  mac_broker.rs  main.rs  os_broker.rs  rect.rs
harper-desktop/src-tauri/src/communication/: client.rs  error.rs  framing.rs  message.rs  mod.rs  server.rs
harper-desktop/src-tauri/src/highlighter/: error.rs  mod.rs  render_state.rs  window.rs  window_manager.rs
harper-desktop/src/lib/: DesktopUpdater.ts  EditorView.svelte  client.ts
harper-desktop/src/lib/settings/: SettingsApp.svelte  SettingsSidebar.svelte  settings-data.ts  settings.css
harper-desktop/src/routes/: +page.svelte
harper-dictionary-wordlist/: Cargo.toml
harper-dictionary-wordlist/src/: lib.rs
harper-ls/: Cargo.toml
harper-ls/src/: backend.rs  main.rs
harper-tex/src/: masker.rs
harper-typst/src/: lib.rs  typst_translator.rs
harper-wasm/src/: lib.rs
(+14 files in other folders)
