[package]
name = "harper-dictionary-wordlist"
version = "2.1.0"
edition = "2024"
description = "The language checker for developers."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/automattic/harper"

[dependencies]
harper-core = { path = "../harper-core", version = "2.0.0", features = ["concurrent"] }
itertools = "0.14.0"
tokio = { version = "1.52.1", default-features = false, features = ["fs", "io-util", "macros", "rt"] }
